--- a/schichtplanGeneratorFrontend/package.json
+++ b/schichtplanGeneratorFrontend/package.json
@@ -27,6 +27,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "@ngrx/effects": "^15.4.0",
+    "@ngrx/entity": "^15.4.0",
     "@ngrx/router": "^1.0.0-beta.2",
     "@ngrx/store": "^15.4.0",
     "ionicons": "^7.0.0",
