--- a/schichtplanGeneratorBackend/package.json
+++ b/schichtplanGeneratorBackend/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0"
   }
 }
