--- a/schichtplanGeneratorFrontend/package.json
+++ b/schichtplanGeneratorFrontend/package.json
@@ -28,8 +28,7 @@
     "@ionic/angular": "^7.0.0",
     "@ngrx/effects": "^15.4.0",
     "@ngrx/entity": "^15.4.0",
-    "@ngrx/router": "^1.0.0-beta.2",
-    "@ngrx/store": "^15.4.0",
+    "@ngrx/router-store": "^15.4.0",
     "ionicons": "^7.0.0",
     "ngrx": "0.0.1-security",
     "rxjs": "~7.5.0",
